--- a/05_Sieci_w_pelni_polaczone_2.ipynb
+++ b/05_Sieci_w_pelni_polaczone_2.ipynb
@@ -118,9 +118,9 @@
    "source": [
     "# Zbiór EMNIST\n",
     "\n",
-    "Jako zbiorów treningowych do analizy obrazów użyjemy rozszeżonego zbioru MNIST - \n",
+    "Jako zbiorów treningowych do analizy obrazów użyjemy rozszerzonego zbioru MNIST - \n",
     "[EMNIST](https://www.nist.gov/itl/products-and-services/emnist-dataset)\n",
-    "zawiwrającego duża liczbę zdjęć ręcznie pisanych liter i cyfr. Zdbjęcia mają rozdzielczość `28x28` pikseli, \n",
+    "zawierającego dużą liczbę zdjęć ręcznie pisanych liter i cyfr. Zdjęcia mają rozdzielczość `28x28` pikseli, \n",
     "a każdy piksel koduje poziom szarości w 8 bitowej skali.\n",
     "\n",
     "![image.png](attachment:bc6d17f0-c99d-4972-87c6-aa1cd6019175.png)"
@@ -141,7 +141,7 @@
     "**Proszę:**\n",
     "\n",
     "* pobrać zbiór EMNIST\n",
-    "* napisać funkcję `getEMNIST(datasetName, datasetPath)` która zwróci krotkę `(features, labels)` dla zbioru o nazwie odpowiedającej nazwie odpowiedniego pliku, np:\n",
+    "* napisać funkcję `getEMNIST(datasetName, datasetPath)` która zwróci krotkę `(features, labels)` dla zbioru o nazwie odpowiadającej nazwie odpowiedniego pliku, np.:\n",
     "  ```Python\n",
     "  \n",
     "  x, y = getEMNIST('emnist-digits-train', datasePath)\n",
@@ -155,9 +155,9 @@
     "\n",
     "**Uwagi:** \n",
     "\n",
-    "* pliki są duże. Optymalnie jest pobrać - na dysk Google, lub na lokalny dysk\n",
-    "* dane są zapisane w binarnym fomacie IDX. Do ich dekodowania można użyć pakietu `idx2numpy`. Pakiet można doinstalować\n",
-    "  do aktualnej sesji korzystasjąc z komendy `pip`. W komórce notatnika komendy linni poleceń trzeba poprzedzić wykrzyknikiem: \n",
+    "* pliki są duże. Optymalnie jest pobrać - na dysk Google lub na lokalny dysk\n",
+    "* dane są zapisane w binarnym formacie IDX. Do ich dekodowania można użyć pakietu `idx2numpy`. Pakiet można doinstalować\n",
+    "  do aktualnej sesji korzystając z komendy `pip`. W komórce notatnika komendy linii poleceń trzeba poprzedzić wykrzyknikiem: \n",
     "  ```Shell\n",
     "  \n",
     "  !pip install idx2numpy\n",
@@ -265,8 +265,8 @@
    "source": [
     "**Proszę:**\n",
     "\n",
-    "* napisać funkcję `plotMNIST(x, y, y_pred)` która rysuje cztery losowe obrazy podpisane dwoma rodzajami etykiet\n",
-    "  zawarrych w macierzach `y` i `y_pred`\n",
+    "* napisać funkcję `plotMNIST(x, y, y_pred)`, która rysuje cztery losowe obrazy podpisane dwoma rodzajami etykiet\n",
+    "  zawartych w macierzach `y` i `y_pred`\n",
     "* po dopracowaniu kodu funkcji umieścić ją w module `modules/emnist_functions.py`  "
    ]
   },
@@ -450,7 +450,7 @@
     "[8 9 6]\n",
     "```\n",
     "\n",
-    "Sieć którą skonstruujemy będzie estymowała prawdopodobieństwo przynależności do klasy na podstawie cech:\n",
+    "Sieć, którą skonstruujemy, będzie estymowała prawdopodobieństwo przynależności do klasy na podstawie cech:\n",
     "\n",
     "$$\n",
     "{\\huge\n",
@@ -458,14 +458,13 @@
     "}\n",
     "$$\n",
     "\n",
-    "następnie użyjemy klasyfikacji Bayesa przypisując klasę o maksymalnym prawodopodobieństwie:\n",
+    "następnie użyjemy klasyfikacji Bayesa przypisując klasę o maksymalnym prawdopodobieństwie:\n",
     "\n",
     "$$\n",
     "{\\huge\n",
     "g = argmax_{g \\in G} f_{g}(x)\n",
     "}\n",
-    "$$\n",
-    "\n"
+    "$$"
    ]
   },
   {
@@ -482,7 +481,7 @@
     "\n",
     "* `sparse_categorical_crossentropy` - implementacja zakładająca, że etykiety zawierają numery klas\n",
     "\n",
-    "* `categorical_crossentropy` - implementacja zakłądająca, że etykiety zawierają wektory prawdopodobieństw przynależności do klas:\n",
+    "* `categorical_crossentropy` - implementacja zakładająca, że etykiety zawierają wektory prawdopodobieństw przynależności do klas:\n",
     "\n",
     "```Python\n",
     "x = tf.one_hot(y_train[:3], 10)\n",
@@ -493,7 +492,7 @@
     " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]], shape=(3, 10), dtype=float32)\n",
     "```  \n",
     "\n",
-    "W naszym przypadku każdy przykłąd należy do jednej klasy, więc wektor prawdopodobieństw zawiera zerach, za wyjątkiem elementu odpowiadającego klasie do której należy przykład. Taka reprezentacja nazywa się gorąco jedynkową, ang. `one_hot`\n"
+    "W naszym przypadku każdy przykład należy do jednej klasy, więc wektor prawdopodobieństw zawiera zerach, z wyjątkiem elementu odpowiadającego klasie, do której należy przykład. Taka reprezentacja nazywa się gorąco jedynkową, ang. `one_hot`\n"
    ]
   },
   {
@@ -506,8 +505,8 @@
     "tags": []
    },
    "source": [
-    "* wartwa wyjściowa ma teraz liczbę neuronów równa liczbie klas - każdy neuron zwraca prawdopodobieństwo przynależności do dajej klasy\n",
-    "* funkcja aktywacji warstwy wyjściowej powinna być ustawiona na `softmax` by zapewnić normalizację prawdopodobieśtwa przykładu do 1:\n",
+    "* warstwa wyjściowa ma teraz liczbę neuronów równa liczbie klas - każdy neuron zwraca prawdopodobieństwo przynależności do danej klasy\n",
+    "* funkcja aktywacji warstwy wyjściowej powinna być ustawiona na `softmax` by zapewnić normalizację prawdopodobieństwa przykładu do 1:\n",
     "\n",
     "$$\n",
     "{\\huge\n",
@@ -713,7 +712,7 @@
     "**Proszę:**\n",
     "\n",
     "* narysować cztery losowe przykłady z informacją etykietach: prawdziwej i przyznanej przez model\n",
-    "* narysować cztery przykłady w których odpowiedź modelu nie jest poprawna"
+    "* narysować cztery przykłady, w których odpowiedź modelu nie jest poprawna"
    ]
   },
   {
@@ -777,8 +776,8 @@
    "source": [
     "## Zapis modelu\n",
     "\n",
-    "Model stworzony w Keras może być zapisany w całości - struktura i wagi, lub jako same wagi.\n",
-    "W nazwie pliku modelu warto zakodować podstawowe informacje o trenigi, np. datę i liczbę epok."
+    "Model stworzony w Keras może być zapisany w całości - struktura i wagi lub jako same wagi.\n",
+    "W nazwie pliku modelu warto zakodować podstawowe meta dane o treningu, np. datę i liczbę epok."
    ]
   },
   {
@@ -921,9 +920,9 @@
     "```Python\n",
     "model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "                            filepath=checkpoint_filepath, #ścieżka do plików modelu. Wymaga odpowiedniego formatowania \n",
-    "                                                          #jeśli pliki modeli nie mają być naspisywane:\n",
+    "                                                          #jeśli pliki modeli nie mają być nadpisywane:\n",
     "                                                          #  checkpoints/model_{epoch:02d}.hdf5            \n",
-    "                            save_weights_only=True,       #flaga sterująca zapisam całej struktury modely, lub jedynie jego wag\n",
+    "                            save_weights_only=True,       #flaga sterująca zapisem całej struktury modelu, lub jedynie jego wag\n",
     "                            monitor='val_accuracy',       #kryterium wyboru najlepszego modelu na danym etapie treningu\n",
     "                            mode='max',                   #kierunek kryterium: max - więcej znaczy lepiej, min - odwrotnie \n",
     "                            save_best_only=True)          #zapisuje model jeśli jest lepszy niż model poprzednio zapisany\n",
@@ -997,7 +996,7 @@
    "source": [
     "## Wczytywanie wag.\n",
     "\n",
-    "Jeśli w trakcie treningu zapisywano same wagi trzeba je wczytać do istniejącego modelu:\n",
+    "Jeśli w trakcie treningu zapisywano same wagi, trzeba je wczytać do istniejącego modelu:\n",
     "```Python\n",
     "checkpoint_path = \"training/checkpoints/model_checkpoint_epoch_01.pb\"\n",
     "model.load_weights(checkpoint_path)\n",
@@ -1099,8 +1098,8 @@
     "  **Kod powinien jedynie używać funkcji zdefiniowanych w komórkach\n",
     "  zadania domowego i module `emnist_functions`**\n",
     "* wypisać na ekran dokładność, `accuracy`, modelu na zbiorach treningowym i testowym\n",
-    "* dla zbiorów treningowego i testowego narysować macierze pomyłek z odpowienimi etykietami na osiach\n",
-    "* wskazać klasy które słabo się separują\n",
+    "* dla zbiorów treningowego i testowego narysować macierze pomyłek z odpowiednimi etykietami na osiach\n",
+    "* wskazać klasy, które słabo się separują\n",
     "* odkodować komunikat zapisany w pliku [encoded.npz](http://studenci.fuw.edu.pl/~akalinow/encoded.npz)\n",
     "    * plik zawiera macierz o kształcie `(-1,28,28)` którą można wczytać następująco:\n",
     "    ```Python\n",
@@ -1407,7 +1406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0rc1"
   },
   "rise": {
    "center": false,
