--- a/06_Sieci_ze_splotem_1.ipynb
+++ b/06_Sieci_ze_splotem_1.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "# Warstwa splotowa - ang. convlolution layer.\n",
     "\n",
-    "Analiza obrazu o rozdzielczości 10M pikseli z użyciem sieci w pełni połączonej, wymaga \n",
+    "Analiza obrazu o rozdzielczości 10M pikseli z użyciem sieci w pełni połączonej wymaga \n",
     "\n",
     "$$\n",
     "{\\huge\n",
@@ -115,10 +115,10 @@
     "}\n",
     "$$\n",
     "\n",
-    "wag już w pierwszej wartwie ukrytej. Taka duża liczba wag jest trudna w treningu. W szczególności jest podatna na przetrenowania, co widać na przykładzie zbioru MNIST.\n",
+    "wag już w pierwszej warstwie ukrytej. Taka duża liczba wag jest trudna w treningu. W szczególności jest podatna na przetrenowanie, co widać na przykładzie zbioru MNIST.\n",
     "\n",
     "W 1998 roku zaproponowano architekturę z warstwami współdzielącymi wagi - [LeNet](https://ieeexplore.ieee.org/document/726791).\n",
-    "Warstwy ze współdzielemien wag są obecnie nazywane warstawi splotowymi, ang. `convoliution layer`. Sieci wykorzystujące takie warstwy to \n",
+    "Warstwy ze współdzieleniem wag są obecnie nazywane warstwami splotowymi, ang. `convoliution layer`. Sieci wykorzystujące takie warstwy to \n",
     "sieci konwolucyjne, ang. `convolution neural network, CNN`\n",
     "\n",
     "Źródło rysunków: [A guide to convolution arithmetic for deep learning, arXiv:1603.07285](https://arxiv.org/abs/1603.07285)"
@@ -139,7 +139,7 @@
     "tags": []
    },
    "source": [
-    "- **jądro, ang. `kernel/filter`** - zbiór wag wspólny dla calego obrazu. Jądro zwykle ma podstać macierzy kwadratowej.\n",
+    "- **jądro, ang. `kernel/filter`** - zbiór wag wspólny dla całego obrazu. Jądro zwykle ma podstać macierzy kwadratowej.\n",
     "\n",
     "![image.png](attachment:a80d4b84-8908-453f-acf8-614750de2591.png)"
    ]
@@ -199,7 +199,7 @@
     "tags": []
    },
    "source": [
-    "* **wypełnienie, ang. padding** - sposób rozszerzenia obrazu w celu uzyskania pożadanego kształtu wyniku warsty konwolucyjnej, np. zachowania tego samego kształtu dla kolejnych warstw konwolucyjnych. Tutaj: wypełnienie zerami, ang. `zero padding`.\n",
+    "* **wypełnienie, ang. padding** - sposób rozszerzenia obrazu w celu uzyskania pożądanego kształtu wyniku warstwy konwolucyjnej, np. zachowania tego samego kształtu dla kolejnych warstw konwolucyjnych. Tutaj: wypełnienie zerami, ang. `zero padding`.\n",
     "\n",
     "![image.png](attachment:86e8bf6f-92a7-48ba-8368-79b945e99230.png)\n"
    ]
@@ -219,7 +219,7 @@
     "tags": []
    },
    "source": [
-    "* **dylatacja** - odstęp między elementami pola recepcyjnego. Odstęp  wynosi `d-1` - czyli brak odstępu odpowiada `n=1`\n",
+    "* **dylatacja** - odstęp między elementami pola recepcyjnego. Odstęp wynosi `d-1` - czyli brak odstępu odpowiada `n=1`\n",
     "\n",
     "![image.png](attachment:58c599d0-dd01-42f2-a34d-36fb76798dfc.png)"
    ]
@@ -304,7 +304,7 @@
     "* podać na jej wejściu rysunek o rozmiarze `(16,16)` wypełniony jedynkami\n",
     "* wypisać na ekran kształt wejścia i wyjścia warstwy\n",
     "\n",
-    "**Wskazówka:** proszę zajrzeć do dokumentacji `tf.keras.layers.Conv2D()` i sprawdzić możliwe argumenty kontruktora"
+    "**Wskazówka:** proszę zajrzeć do dokumentacji `tf.keras.layers.Conv2D()` i sprawdzić możliwe argumenty konstruktora"
    ]
   },
   {
@@ -519,7 +519,7 @@
     "\\end{bmatrix}\n",
     "}\n",
     "$$ \n",
-    "* wykonać operację warstwy nawejściu\n",
+    "* wykonać operację warstwy na wejściu\n",
     "* narysować oryginalny rysunek i rysunki powstałe na wyjściu obu warstw\n",
     "* wypisać na ekran maksymalne wartości pikseli dla kanałów wyjściowego obrazu\n",
     "* narysować wyjściowe obrazy z warunkiem na minimalną wartość piksela powyżej maksymalnej dla kanału z filtrem liniowym."
@@ -628,7 +628,7 @@
    "source": [
     "Warstwy splotowe generują nowe obrazy. Zwykle rozdzielczość nowego obrazu jest taka jak obrazu wejściowego, ale liczba kanałów, \"kolorów\" wzrasta. Redukcja rozdzielczości jest uzyskiwana przez warstwy łączące, ang. `pooling layers`. \n",
     "\n",
-    "Warstwy łączące mają podobnie jak, konwolucyjnej wąskie pole recepcyjne, ale warstwy te nie mają żandych wag, czyli parametrów podlegających treningowi - ang. `learning parameters`. Warstwy łączące zawsze wykonują tę samą operację zdefiniowaną dla danej warstwy:"
+    "Warstwy łączące mają podobnie jak, konwolucyjnej wąskie pole recepcyjne, ale warstwy te nie mają żadnych wag, czyli parametrów podlegających treningowi - ang. `learning parameters`. Warstwy łączące zawsze wykonują tę samą operację zdefiniowaną dla danej warstwy:"
    ]
   },
   {
@@ -700,10 +700,10 @@
     "tf.keras.layers.MaxPooling2D(\n",
     "    pool_size=(2, 2),          #rozmiar pola recepcyjnego\n",
     "    strides=None,              #wartość kroku w obu wymiarach\n",
-    "    padding='valid',            # sposób dopelnienia: \n",
+    "    padding='valid',            # sposób dopełnienia: \n",
     "                                # `valid` - brak dopełnienia\n",
     "                                # `same` - dopełnienie zerami na brzegach, tak by wyjście miało ten sam rozmiar\n",
-    "                                #  przestenny, co wejście: (batch size, liczba filtrów, W, H)\n",
+    "                                #  przestrzenny, co wejście: (batch size, liczba filtrów, W, H)\n",
     "    data_format=None,           # specyfikacja kolejności wymiarów: \n",
     "                                # \"channels_first\" - (batch size, liczba kanałów, W, H)\n",
     "                                # \"channels_last\" - (batch size, W, H, liczba kanałów) <-- domyślne w TF\n",
@@ -723,7 +723,7 @@
    "source": [
     "**Proszę:**\n",
     "\n",
-    "* wykonać operację `MaxPooling2D` na obrazach wyjściowych z warstwy splotowej z poprzedniej komórki z domyślnymi parametrami warstwy          łączącej\n",
+    "* wykonać operację `MaxPooling2D` na obrazach wyjściowych z warstwy splotowej z poprzedniej komórki z domyślnymi parametrami warstwy łączącej\n",
     "* narysować wynik"
    ]
   },
@@ -794,7 +794,7 @@
     "tags": []
    },
    "source": [
-    "Zbiór obrazów uzyskany przez poszczególne filtry nazywany jest mapą cech, ang. `feature map`. Filtry są nazywane cenchami, `features`."
+    "Zbiór obrazów uzyskany przez poszczególne filtry nazywany jest mapą cech, ang. `feature map`. Filtry są nazywane cechami, `features`."
    ]
   },
   {
@@ -937,16 +937,16 @@
     "* 3$\\times$ blok: \n",
     "    * warstwa `Conv2D`, `64` filtry, rozmiar filtra `3`, funkcja aktywacji: `ReLU`, padding: `same`\n",
     "    * wartwa `MaxPooling`, rozmiar filtra `2`\n",
-    "* warstwa spłaszcająca:\n",
+    "* warstwa spłaszczająca:\n",
     "```Python\n",
     "\n",
     "tf.keras.layers.Flatten()\n",
     "\n",
     "```\n",
     "* warstwa gęsta, `128` neuronów, funkcja aktywacji: `ReLU`\n",
-    "* wartwa opuszczającza, z częstością `0.5`\n",
+    "* warstwa opuszczająca, z częstością `0.5`\n",
     "* warstwa gęsta, `64` neuronów, funkcja aktywacji: `ReLU`\n",
-    "* wartwa opuszczającza, z częstością `0.5`\n",
+    "* warstwa opuszczająca, z częstością `0.5`\n",
     "* warstwa wyjściowa\n",
     "\n",
     "Specyfikacja warstwy wyjściowej powinna być dobrana do zagadnienia:\n",
@@ -1053,8 +1053,8 @@
     "* załadować zbiór `emnist-digits-train` i podzielić go na części uczącą i walidacyjną w proporcjach `5:1`\n",
     "* w module `emnist_functions` zawrzeć funkcję  `trainModel(model, features, labels, nEpochs=200)` zawierającą:\n",
     "    * ustalenie harmonogramu współczynnika uczenia\n",
-    "    * ustalenie wczesnego zatrzymania trenowania na podstawie monitoringu funkcji strany na zbiorze walidacyjnych\n",
-    "        * jako zbioru walidacyjnego proszę użyć `0.1` zbioru uczącego prze ustawienie parametru\n",
+    "    * ustalenie wczesnego zatrzymania trenowania na podstawie monitoringu funkcji straty na zbiorze walidacyjnych\n",
+    "        * jako zbioru walidacyjnego proszę użyć `0.1` zbioru uczącego przez ustawienie parametru\n",
     "       ```Python\n",
     "       \n",
     "        validation_split=0.1\n",
@@ -1172,7 +1172,7 @@
    "source": [
     "**Proszę:**\n",
     "\n",
-    "* narysować osiem losowych przykładów w których odpowiedź modelu nie jest poprawna"
+    "* narysować osiem losowych przykładów, w których odpowiedź modelu nie jest poprawna"
    ]
   },
   {
@@ -1250,8 +1250,8 @@
     "  **Kod powinien jedynie używać funkcji zdefiniowanych w komórkach\n",
     "  zadania domowego i module `emnist_functions`**\n",
     "* wypisać na ekran dokładność, `accuracy`, modelu na zbiorach treningowym i testowym\n",
-    "* dla zbiorów treningowego i testowego narysować macierze pomyłek z odpowienimi etykietami na osiach\n",
-    "* wskazać klasy które słabo się separują\n",
+    "* dla zbiorów treningowego i testowego narysować macierze pomyłek z odpowiednimi etykietami na osiach\n",
+    "* wskazać klasy, które słabo się separują\n",
     "* odkodować komunikat zapisany w pliku [encoded.npz](http://studenci.fuw.edu.pl/~akalinow/encoded.npz)\n",
     "    * plik zawiera macierz o kształcie `(-1,28,28)` którą można wczytać następująco:\n",
     "    ```Python\n",
@@ -1493,19 +1493,6 @@
     "#END_SOLUTION\n",
     "pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1534,7 +1521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0rc1"
   },
   "rise": {
    "center": false,
