* fix image embedding in a cell

--- a/01b_Konfiguracja_srodowiska.ipynb
+++ b/01b_Konfiguracja_srodowiska.ipynb
@@ -225,9 +225,7 @@
    "source": [
     "Oczekiwany wynik:\n",
     "\n",
-    "<img border=\"0\" alt=\"Kaggle\" \n",
-    "    src=\"attachment:3e2ab613-6802-47a1-bcc3-df5d6126de3f.png\" \n",
-    "    width=\"600\" height=\"600\" align=\"left\">"
+    "![image.png](attachment:3e2ab613-6802-47a1-bcc3-df5d6126de3f.png)"
    ]
   },
   {
