--- a/01b_Konfiguracja_srodowiska.ipynb
+++ b/01b_Konfiguracja_srodowiska.ipynb
@@ -12,15 +12,15 @@
    "source": [
     "## Zdalny dostęp do maszyny obliczeniowej\n",
     "\n",
-    "Bardzo często, **w zasadzie zawsze**, nie mamy dostępu bezpośredniego do maszyny na której są wykonywane obliczenia.\n",
-    "Środowisko Google colaboratory dostarcza dostępu do wirtualnych maszyn gdzieś w cyberprzestrzeni.\n",
-    "Maszyny wirtualne są powoływane do życia dla każego użytkownika, dlatego etap ``Łączenie`` wymaga makroskopowej ilości czasu.\n",
+    "Bardzo często, **w zasadzie zawsze**, nie mamy dostępu bezpośredniego do maszyny, na której są wykonywane obliczenia.\n",
+    "Środowisko Google Colaboratory (Google Colab) dostarcza dostępu do wirtualnych maszyn gdzieś w cyberprzestrzeni.\n",
+    "Maszyny wirtualne są powoływane do życia dla każdego użytkownika, dlatego etap ``Łączenie`` wymaga makroskopowej ilości czasu.\n",
     "\n",
-    "Żadko się jednak zdarza że ośrodki dostarczającej mocy obliczeniowej, np. ICM dostarczają też takiego wygodnego środowiska jak Colab. Zwykle użytkownik musi wykonać parę kroków by mieć analogiczną funkcjonalność:\n",
+    "Rzadko się jednak zdarza, że ośrodki dostarczające mocy obliczeniowej, np. ICM dostarczają też takiego wygodnego środowiska jak Colab. Zwykle użytkownik musi wykonać parę kroków, by mieć analogiczną funkcjonalność:\n",
     "\n",
-    "1) łączenie się z maszyną zdalną\n",
-    "2) uruchomienie usługi typu Jupyter server\n",
-    "3) połączenie się z usługą z komputera lokalnego - terminmala"
+    "1) łączenie się z maszyną zdalną,\n",
+    "2) uruchomienie usługi typu *Jupyter Server*,\n",
+    "3) połączenie się z usługą z komputera lokalnego - terminala"
    ]
   },
   {
@@ -35,14 +35,14 @@
    "source": [
     "## Połączenie z maszyną zdalną\n",
     "\n",
-    "W każdym szanującym się ośrodku komputerowym urządzenia w wenętrznej sieci komputerowej (Local Area Netowrk, LAN) są odizolowane od sieci rozległej (Wide Area Network, WAN), czyli całego internetu.\n",
+    "W każdym szanującym się ośrodku komputerowym urządzenia w wewnętrznej sieci komputerowej (Local Area Netowrk, LAN) są odizolowane od sieci rozległej (Wide Area Network, WAN), czyli całego internetu.\n",
     "\n",
-    "Dostęp do sieci LAN usyskuje się przez komputer dostępowy - `gateway`. W przypadku studentów Wydziału Fizyki to jest komputer\n",
+    "Dostęp do sieci LAN uzyskuje się przez komputer dostępowy -- `gateway`. W przypadku studentów Wydziału Fizyki jest to komputer\n",
     "```Bash\n",
     "tempac.okwf.fuw.edu.pl\n",
     "```\n",
     "\n",
-    "Po zalogowaniu się na komputer dostępowy można zalogować się dalej na komputer  któ©y dostarcza mocy obliczeniowej, np.\n",
+    "Po zalogowaniu się na komputer dostępowy można zalogować się dalej na komputer który dostarcza mocy obliczeniowej, np.\n",
     "komputery z pracowni:\n",
     "```Bash\n",
     "pracownia.okwf.fuw.edu.pl\n",
@@ -61,13 +61,13 @@
    "source": [
     "**Proszę:**\n",
     "\n",
-    "* zalogować się na komputer `pracownia` bezpośrednio - nie powino się udać z sieci `FUW.open`\n",
-    "* zalogować się na komputer `tempac` a potem na komputer `pracownia` \n",
+    "* zalogować się na komputer `pracownia` bezpośrednio -- nie powinno się udać z sieci `FUW.open`\n",
+    "* zalogować się na komputer `tempac`, a potem na komputer `pracownia` \n",
     "\n",
     "Instrukcje:\n",
     "\n",
-    "* Linux - należy otworzyć okno terminala\n",
-    "* Windows -  aplkacje -> szukaj -> cmd\n",
+    "* Linux -- należy otworzyć okno terminala\n",
+    "* Windows -- aplikacje -> szukaj -> cmd\n",
     "\n",
     "W oknie terminala należy użyć komendy `ssh`:  \n",
     "  ```Bash\n",
@@ -91,14 +91,14 @@
     "tags": []
    },
    "source": [
-    "Po zalogowaniu się można uruchomić odpowiedną usługę. Oczywiście takie logowanie w dwu krokach jest bardzo niewygodne.\n",
-    "Można je ułatwić używająć tunelowania sieciowego. W tym celu trzeba dodać odpowiedni wpis do konfiguracji programu `ssh`\n",
+    "Po zalogowaniu się można uruchomić odpowiednią usługę. Oczywiście takie logowanie w dwu krokach jest bardzo niewygodne.\n",
+    "Można je ułatwić używając tunelowania sieciowego. W tym celu trzeba dodać odpowiedni wpis do konfiguracji programu `ssh`\n",
     "(ta sama lokalizacja na Linux i Windows):\n",
     "```Bash\n",
     ".ssh/config\n",
     "```\n",
     "\n",
-    "Jeśli nie ma takiego pliku w katalogu użytkownika należy go stworzyć. W pliku `config` umieszczamy bloki konfigurujące dostęp do zdalnych maszyn. W przypadku pracowni taki blok powinien wyglądać następująco:\n",
+    "Jeśli nie ma takiego pliku w katalogu użytkownika, to należy go stworzyć. W pliku `config` umieszczamy bloki konfigurujące dostęp do zdalnych maszyn. W przypadku pracowni taki blok powinien wyglądać następująco:\n",
     "```Bash\n",
     "Host pracownia\n",
     "     ForwardX11 yes\n",
@@ -149,20 +149,20 @@
     "```Shell\n",
     "~akalinow/Publiczny/UczenieMaszynoweII/ml_lecture\n",
     "```\n",
-    "* w kontenerze urucomić serwer jupyter:\n",
+    "* w kontenerze uruchomić serwer jupyter:\n",
     "```Shell\n",
     "jupyter lab --no-browser --ip=0.0.0.0 --notebook-dir=$HOME\n",
     "```\n",
-    "* otworzyć okno Jupyter na lokalnym komputerze używając URL wypisanego w oknie gdzie uruchomiono serwer, np:\n",
+    "* otworzyć okno Jupyter na lokalnym komputerze używając URL wypisanego w oknie gdzie uruchomiono serwer, np.:\n",
     "```Shell\n",
     "http://127.0.0.1:8888/lab?token=e7862a89b9fe602cb31391359f8516376\n",
     "```\n",
     "\n",
-    "**Uwaga 1:** proszę wzrócić uwagą na adres - trzeba użyć adresu IP lokalnego komputera: `127.0.0.1`.\n",
-    "dostęp prze adres IP lub DNS komputera zdalnego,  ```pd100.odk.fuw.edu.pl``` zadziała jedynie jeśli łączymy się z komputera\n",
-    "w tej samej sieci LAN co kpmputer ```pd100```, czyli np. sieci wewnętrzej FUW.\n",
+    "**Uwaga 1:** proszę zwrócić uwagą na adres -- trzeba użyć adresu IP lokalnego komputera: `127.0.0.1`.\n",
+    "dostęp przez adres IP lub DNS komputera zdalnego,  ```pd100.odk.fuw.edu.pl``` zadziała jedynie jeśli łączymy się z komputera\n",
+    "w tej samej sieci LAN co komputer ```pd100```, czyli np. sieci wewnętrznej FUW.\n",
     "\n",
-    "**Uwaga 2:** kopmutery ```pracownia``` nie nadają się do treningu modeli uczenia maszynowego. Kroki powyżej stanowią jedynie trening.\n",
+    "**Uwaga 2:** komputery ```pracownia``` nie nadają się do treningu modeli uczenia maszynowego. Kroki powyżej stanowią jedynie trening.\n",
     "\n",
     "**Uwaga 3:** analogiczny dostęp można uzyskać z wtyczką ```Remote explorer``` do Visual Studio."
    ]
@@ -177,8 +177,8 @@
     "tags": []
    },
    "source": [
-    "Środowisko programistyczne: iterpreter Python i potrzebne biblioteki można instalować samodzielne.\n",
-    "Dużo wygodniejszą opcją są kontenery - zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
+    "Środowisko programistyczne: interpreter Python i potrzebne biblioteki można instalować samodzielne.\n",
+    "Dużo wygodniejszą opcją są kontenery -- zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
     "i uzyskać ściśle określone środowisko pracy.\n",
     "\n",
     "1) instalacja programów do zarządzania kontenerami: [Docker](https://docs.docker.com/)\n",
@@ -327,8 +327,8 @@
     "\n",
     "Dzięki temu mamy:\n",
     "\n",
-    "* zalety z używania Visual Studio - duża liczba przydatnych wtyczek, autouzupełniania (`dumb` i `AI`)\n",
-    "* zalety z używania kontenera - uniknięcie ręcznego instalowania wymaganych pakietów"
+    "* zalety z używania Visual Studio -- duża liczba przydatnych wtyczek, autouzupełniania (`dumb` i `AI`)\n",
+    "* zalety z używania kontenera -- uniknięcie ręcznego instalowania wymaganych pakietów"
    ]
   },
   {
