--- a/01b_Konfiguracja_srodowiska.ipynb
+++ b/01b_Konfiguracja_srodowiska.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "W każdym szanującym się ośrodku komputerowym urządzenia w wewnętrznej sieci komputerowej (Local Area Netowrk, LAN) są odizolowane od sieci rozległej (Wide Area Network, WAN), czyli całego internetu.\n",
     "\n",
-    "Dostęp do sieci LAN uzyskuje się przez komputer dostępowy -- `gateway`. W przypadku studentów Wydziału Fizyki jest to komputer\n",
+    "Dostęp do sieci LAN uzyskuje się przez komputer dostępowy - `gateway`. W przypadku studentów Wydziału Fizyki jest to komputer\n",
     "```Bash\n",
     "tempac.okwf.fuw.edu.pl\n",
     "```\n",
@@ -61,13 +61,13 @@
    "source": [
     "**Proszę:**\n",
     "\n",
-    "* zalogować się na komputer `pracownia` bezpośrednio -- nie powinno się udać z sieci `FUW.open`\n",
+    "* zalogować się na komputer `pracownia` bezpośrednio - nie powinno się udać z sieci `FUW.open`\n",
     "* zalogować się na komputer `tempac`, a potem na komputer `pracownia` \n",
     "\n",
     "Instrukcje:\n",
     "\n",
-    "* Linux -- należy otworzyć okno terminala\n",
-    "* Windows -- aplikacje -> szukaj -> cmd\n",
+    "* Linux - należy otworzyć okno terminala\n",
+    "* Windows - aplikacje -> szukaj -> cmd\n",
     "\n",
     "W oknie terminala należy użyć komendy `ssh`:  \n",
     "  ```Bash\n",
@@ -158,7 +158,7 @@
     "http://127.0.0.1:8888/lab?token=e7862a89b9fe602cb31391359f8516376\n",
     "```\n",
     "\n",
-    "**Uwaga 1:** proszę zwrócić uwagą na adres -- trzeba użyć adresu IP lokalnego komputera: `127.0.0.1`.\n",
+    "**Uwaga 1:** proszę zwrócić uwagą na adres - trzeba użyć adresu IP lokalnego komputera: `127.0.0.1`.\n",
     "dostęp przez adres IP lub DNS komputera zdalnego,  ```pd100.odk.fuw.edu.pl``` zadziała jedynie jeśli łączymy się z komputera\n",
     "w tej samej sieci LAN co komputer ```pd100```, czyli np. sieci wewnętrznej FUW.\n",
     "\n",
@@ -178,7 +178,7 @@
    },
    "source": [
     "Środowisko programistyczne: interpreter Python i potrzebne biblioteki można instalować samodzielne.\n",
-    "Dużo wygodniejszą opcją są kontenery -- zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
+    "Dużo wygodniejszą opcją są kontenery - zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
     "i uzyskać ściśle określone środowisko pracy.\n",
     "\n",
     "1) instalacja programów do zarządzania kontenerami: [Docker](https://docs.docker.com/)\n",
@@ -327,8 +327,8 @@
     "\n",
     "Dzięki temu mamy:\n",
     "\n",
-    "* zalety z używania Visual Studio -- duża liczba przydatnych wtyczek, autouzupełniania (`dumb` i `AI`)\n",
-    "* zalety z używania kontenera -- uniknięcie ręcznego instalowania wymaganych pakietów"
+    "* zalety z używania Visual Studio - duża liczba przydatnych wtyczek, autouzupełniania (`dumb` i `AI`)\n",
+    "* zalety z używania kontenera - uniknięcie ręcznego instalowania wymaganych pakietów"
    ]
   },
   {
